--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.pavelpilyak.easysql
-pluginName = easy-sql
-pluginRepositoryUrl = https://github.com/pavelpilyak/easy-sql
+pluginGroup = com.github.pavelpilyak.aioptimizer
+pluginName = ai-optimizer
+pluginRepositoryUrl = https://github.com/pavelpilyak/ai-optimizer
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
