--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.pavelpilyak.aioptimizer</id>
-    <name>ai-optimizer Template</name>
+    <name>AI Code Optimizer</name>
     <vendor>pavelpilyak</vendor>
 
     <depends>com.intellij.modules.platform</depends>
